# reddit-sentiment

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  refresh-data.yml
data/processed/: annotated.parquet  health_score_history.csv  model_predictions.json
notebooks/: 01_data_collection_eda.ipynb  02_sentiment_analysis.ipynb  03_brand_insights.ipynb
src/reddit_sentiment/: __init__.py  cli.py  config.py
src/reddit_sentiment/analysis/: brand_comparison.py  brand_signals.py  channel_attribution.py  model_intelligence.py  narrative.py  price_correlation.py  trends.py
src/reddit_sentiment/api/: app.py  models.py
src/reddit_sentiment/collection/: client.py  collector.py  ebay_collector.py  public_collector.py  rss_collector.py  schemas.py
src/reddit_sentiment/dashboard/: app.py
src/reddit_sentiment/detection/: brands.py  channels.py  intent.py  models.py
src/reddit_sentiment/reporting/: charts.py  generator.py
src/reddit_sentiment/sentiment/: pipeline.py  (+2 more)
tests/test_analysis/: test_brand_comparison.py  test_brand_signals.py  test_channel_attribution.py  test_narrative.py  test_price_correlation.py  test_trends.py
tests/test_api/: test_api.py
tests/test_collection/: test_collector.py  test_ebay_collector.py  test_public_collector.py  test_rss_collector.py  test_schemas.py
tests/test_detection/: test_brands.py  test_channels.py  test_intent.py  test_models.py
tests/test_reporting/: test_charts.py  test_generator.py
tests/test_sentiment/: test_pipeline.py  test_transformer.py  test_vader.py
(+1 files in other folders)
