[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reddit-sentiment"
version = "0.1.0"
description = "Reddit sneaker brand sentiment analysis pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "praw>=7.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "vaderSentiment>=3.3",
    "scikit-learn>=1.3",
    "plotly>=5.18",
    "jinja2>=3.1",
    "click>=8.1",
    "tabulate>=0.9",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
# Heavy ML deps (need ~2GB disk); install with: uv sync --extra ml
ml = [
    "torch>=2.1,<2.3",
    "transformers>=4.35",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
reddit-sentiment = "reddit_sentiment.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/reddit_sentiment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B905", "UP042"]
